kubernetes/apps/network/truenas-external/app/httproute.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: truenas-external
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames: ["storage.${SECRET_DOMAIN}"]
  rules:
    - backendRefs:
        - name: truenas-external-external-service
          port: 81
